[QuangVV - 2024-03-25]  Fix bug

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 <body>
     <header>
 
-        @if (roles == "0")
+        @if (roles == "Admin")
         {
             <partial name="_AdminNavbar" ; />
         }
