--- a/WebApp/Views/Shared/_NormalNavbar.cshtml
+++ b/WebApp/Views/Shared/_NormalNavbar.cshtml
@@ -24,7 +24,7 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li class="nav-item me-3">
-                        <a class="d-block" asp-area="" asp-controller="User" asp-action="Profile" title="Thông tin tài khoản">
+                        <a class="d-block" asp-area="" asp-controller="Customer" asp-action="Profile" title="Thông tin tài khoản">
                             <div class="rounded-circle bg-light d-flex align-items-center justify-content-center" style="width: 38px; height: 38px;">
                                 <i class="bi bi-person-fill fs-5 text-dark"></i>
                             </div>
