--- a/WebApp/Views/Home/Login.cshtml
+++ b/WebApp/Views/Home/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Đăng nhập";
+    ViewData["Title"] = "Login";
 }
 
 <div class="login-form">
@@ -8,8 +8,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="mb-5">
-                        <h2 class="display-5 fw-bold text-center">Đăng nhập</h2>
-                        <p class="text-center m-0">Bạn chưa có tài khoản ? <a asp-action="Register">Đăng Kí</a></p>
+                        <h2 class="display-5 fw-bold text-center">Login</h2>
+                            <p class="text-center m-0">Don't have an account? <a asp-controller="Home" asp-action="Register" class="text-decoration-underline"> Register</a></p>
                     </div>
                 </div>
             </div>
@@ -28,22 +28,22 @@
                                     <div class="col-12">
                                         <div class="form-floating mb-3 position-relative">
                                             <input class="form-control border-0 border-bottom rounded-0" id="password" name="password" type="password" placeholder="Password" required>
-                                            <label class="form-label"><i class="bi bi-lock"></i> Mật khẩu</label>
+                                            <label class="form-label"><i class="bi bi-lock"></i> Password</label>
                                             <i class="bi bi-eye-slash position-absolute top-50 end-0 translate-middle-y me-3"
                                                id="togglePassword" style="cursor: pointer;"></i>
                                         </div>
                                     </div>
                                     <div class="justify-content-center align-items-center d-flex flex-column">
                                         <p>
-                                            <a id="forgot-password" class="text-dark" asp-action="ForgotPassword">Quên mật khẩu?</a>
+                                            <a id="forgot-password" class="text-decoration-underline" asp-action="ForgotPassword">Forgot password?</a>
                                         </p>
                                         <p>
-                                            <a id="resend-confirmation" class="text-dark" asp-action="ResendEmailConfirmation">Gửi lại email xác nhận</a>
+                                            <a id="resend-confirmation" class="text-decoration-underline" asp-action="ResendEmail">Resend confirmation email</a>
                                         </p>
                                     </div>
                                     <div class="col-12">
                                         <div class="d-grid">
-                                            <button class="btn btn-success btn-lg" type="submit">Đăng nhập</button>
+                                            <button class="btn btn-success btn-lg" type="submit">Login</button>
                                         </div>
                                     </div>
                                 </div>
@@ -59,7 +59,7 @@
                         <div class="col-12 col-lg-5 d-flex align-items-center">
                             <div class="w-100">
                                 <a asp-controller="Home" asp-action="LoginWithGoogle" class="btn btn-outline-danger w-100">
-                                    <i class="bi bi-google"></i> Đăng nhập bằng Google
+                                    <i class="bi bi-google"></i> Sign in with Google
                                 </a>
                             </div>
                         </div>
