--- a/WebApp/Views/Home/UpdatePassword.cshtml
+++ b/WebApp/Views/Home/UpdatePassword.cshtml
@@ -1,24 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Forgot password";
 }
 
-<div class="register-form">
-    <section class="py-3 py-md-5 py-xl-8 login-background">
-        <div class="container pb-3">
-            <div class="row">
-                <div class="col-12">
-                    <div class="mb-5">
-                        <h2 class="display-5 fw-bold text-center">Register</h2>
-                        <p class="text-center m-0">
-                            Already have an account? <a asp-action="Login">Login</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+<div class="confirmation-form">
+    <section class="py-3 py-md-5 py-xl-8 confirmation-background">
+        <div class="container">
             <div class="row justify-content-center">
-                <div class="col-12 col-lg-10 col-xl-8">
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-lg-5">
+                <div class="col-12 col-lg-6">
+                    <div class="card shadow-sm">
+                        <div class="card-body p-4">
+                            <h2 class="card-title text-center mb-4">Change password</h2>
+
                             <form method="post">
                                 <div class="row gy-3 overflow-hidden">
                                     <div class="col-12">
@@ -49,24 +41,16 @@
                                     </div>
                                     <div class="col-12">
                                         <div class="d-grid">
-                                            <button class="btn btn-success btn-lg" type="submit">Register</button>
+                                            <button class="btn btn-success btn-lg" type="submit">Save</button>
                                         </div>
                                     </div>
                                 </div>
                             </form>
-                        </div>
-                        <div class="col-12 col-lg-2 d-flex align-items-center justify-content-center gap-3 flex-lg-column">
-                            <div class="bg-dark h-100 d-none d-lg-block" style="width: 1px; --bs-bg-opacity: .1;"></div>
-                            <div class="bg-dark w-100 d-lg-none" style="height: 1px; --bs-bg-opacity: .1;"></div>
-                            <div>Hoặc</div>
-                            <div class="bg-dark h-100 d-none d-lg-block" style="width: 1px; --bs-bg-opacity: .1;"></div>
-                            <div class="bg-dark w-100 d-lg-none" style="height: 1px; --bs-bg-opacity: .1;"></div>
-                        </div>
-                        <div class="col-12 col-lg-5 d-flex align-items-center">
-                            <div class="w-100">
-                                <a asp-controller="Home" asp-action="LoginWithGoogle" class="btn btn-outline-danger w-100">
-                                    <i class="bi bi-google"></i> Đăng nhập bằng Google
-                                </a>
+
+                            <div class="text-center mt-3">
+                                <p class="text-muted">
+                                    Already confirmed? <a asp-action="Login" class="text-decoration-underline">Back to Login</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -75,7 +59,6 @@
         </div>
     </section>
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
     <script>
