[QuangVV - 2024-03-25]  Add Venobox and Product Details Page

--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -255,3 +255,7 @@ a{
     padding-right: 0;
     border-right: none;
 }
+
+.nav-pills .nav-item .active {
+    border-bottom: 2px solid var(--bs-primary);
+}
