--- a/WebApp/Views/Admin/CustomerList.cshtml
+++ b/WebApp/Views/Admin/CustomerList.cshtml
@@ -25,8 +25,8 @@
                     <td>@customer.UserName</td>
                     <td>@customer.PhoneNumber</td>
                     <td>
-                        <form asp-action="DeleteCustomer" asp-route-id="@customer.Id" method="post" style="display:inline;">
-                            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this customer?');">Delete</button>
+                        <form asp-action="CustomerDetail" asp-route-id="@customer.Id" method="get" style="display:inline;">
+                            <button type="submit" class="btn btn-warning" >Detail</button>
                         </form>
                     </td>
                 </tr>
