[ThanhHH - 2024-03-27]  Update CustomerDetail.cshtml, CustomerList.cshtml, EditCategory.cshtml, FeedbackList.cshtml

--- a/WebApp/Views/Admin/FeedbackList.cshtml
+++ b/WebApp/Views/Admin/FeedbackList.cshtml
@@ -6,7 +6,7 @@
 <div class="admin-margin">
     <h2>Feedback List</h2>
 
-    <table class="table">
+    <table class="table table-bordered table-striped" width="100%">
         <thead>
             <tr>
                 <th>ID</th>
