--- a/WebApp/Views/Admin/CustomerList.cshtml
+++ b/WebApp/Views/Admin/CustomerList.cshtml
@@ -6,7 +6,7 @@
 <div class="admin-margin">
     <h2>Customer List</h2>
 
-    <table class="table">
+    <table class="table table-bordered table-striped" width="100%">
         <thead>
             <tr>
                 <th>ID</th>
