[QuangVV - 2024-03-27]  Update Menu Index, Menu Page, Product Detail

--- a/WebApp/Views/Shared/_NormalNavbar.cshtml
+++ b/WebApp/Views/Shared/_NormalNavbar.cshtml
@@ -14,10 +14,7 @@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Menu">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Service">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Contact</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto d-flex align-items-center me-3">
