--- a/WebApp/Views/Home/ProductDetail.cshtml
+++ b/WebApp/Views/Home/ProductDetail.cshtml
@@ -1,11 +1,16 @@
-﻿<section>
+﻿@model Product
+@{
+    ViewData["Title"] = "Product Detail";
+    int thumbnail = 0;
+}
+<section>
     <div class="container-xxl py-5 bg-dark hero-header mb-5">
         <div class="container text-center my-5 pb-4">
             <h1 class="display-3 text-white mb-3">Detail</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center text-uppercase">
-                    <li class="breadcrumb-item"><a href="#" style="color:white" onmouseover="this.style.color='#FEA116'" onmouseout="this.style.color='white'">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#" style="color:white" onmouseover="this.style.color='#FEA116'" onmouseout="this.style.color='white'">Menu</a></li>
+                    <li class="breadcrumb-item"><a asp-action="Index" asp-controller="Home" style="color:white" onmouseover="this.style.color='#FEA116'" onmouseout="this.style.color='white'">Home</a></li>
+                    <li class="breadcrumb-item"><a asp-action="Menu" asp-controller="Home" style="color:white" onmouseover="this.style.color='#FEA116'" onmouseout="this.style.color='white'">Menu</a></li>
                     <li class="breadcrumb-item text-white">Food Name</li>
                 </ol>
             </nav>
@@ -14,51 +19,57 @@
     <div class="container">
         <div class="row gx-5">
             <aside class="col-lg-6">
-                <div id="imageCarousel" class="carousel slide border rounded-4 mb-3" data-bs-ride="carousel" style="max-width: 500px; max-height: 400px; overflow: hidden;">
-                    <div class="carousel-inner">
-                        <!-- Slide 1 -->
-                        <div class="carousel-item active">
-                            <a class="venobox" data-gall="mygallery" data-fitview="true" data-fslightbox="mygallery" href="/img//menu-1.jpg">
-                                <img class="d-block w-100 h-100 object-fit-cover rounded-4" src="/img//menu-1.jpg" />
-                            </a>
-                        </div>
-                        <!-- Slide 2 -->
-                        <div class="carousel-item">
-                            <a class="venobox" data-gall="mygallery" data-fitview="true" data-fslightbox="mygallery" href="/img//menu-2.jpg">
-                                <img class="d-block w-100 h-100 object-fit-cover rounded-4" src="/img//menu-2.jpg" />
-                            </a>
-                        </div>
-                        <!-- Slide 3 -->
-                        <div class="carousel-item">
-                            <a class="venobox" data-gall="mygallery" data-fitview="true" data-fslightbox="mygallery" href="/img//menu-3.jpg">
-                                <img class="d-block w-100 h-100 object-fit-cover rounded-4" src="/img//menu-3.jpg" />
-                            </a>
-                        </div>
+                <div id="imageCarousel" class="carousel slide rounded-4 mb-3" data-bs-ride="carousel" style="max-width: 800px; max-height: 600px; overflow: hidden;">
+                    <div class="carousel-inner mb-5">
+                        @if (Model.ProductImages != null)
+                        {
+                            int imageIndex = 0;
+                            foreach(var image in Model.ProductImages)
+                            {
+                                <div class="carousel-item @(imageIndex == 0 ? "active" : "")">
+                                    <div class="d-flex justify-content-center align-items-center">
+                                        <a class="venobox" data-gall="gallery01" data-fitview="true" href="/img/products/@image.ImagePath">
+                                            <img class="rounded-4" src="/img/products/@image.ImagePath" />
+                                        </a>
+                                    </div>
+                                </div>
+                                imageIndex++;
+                            }
+                            <!-- Controls -->
+                            <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </button>
+
+                        }
+                        else
+                        {
+                            <div class="d-flex justify-content-center align-items-center">
+                                <img class="rounded-4" src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg" />
+                            </div>
+                        }
+                        <!-- Thumbnail Row -->
+
                     </div>
-                    <!-- Controls -->
-                    <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
-                        <span class="carousel-control-next-icon"></span>
-                    </button>
-                </div>
+                    <div class="d-flex justify-content-center">
 
-                <!-- Thumbnail Row -->
-                <div class="d-flex justify-content-center">
-                    <img class="border mx-1 rounded-2 item-thumb" width="60" height="60" src="/img//menu-1.jpg" data-bs-target="#imageCarousel" data-bs-slide-to="0" />
-                    <img class="border mx-1 rounded-2 item-thumb" width="60" height="60" src="/img//menu-2.jpg" data-bs-target="#imageCarousel" data-bs-slide-to="1" />
-                    <img class="border mx-1 rounded-2 item-thumb" width="60" height="60" src="/img//menu-3.jpg" data-bs-target="#imageCarousel" data-bs-slide-to="2" />
-                </div>
-
-                <!-- thumbs-wrap.// -->
-                <!-- gallery-wrap .end// -->
+                        @if (Model.ProductImages != null)
+                        {
+                            foreach (var image in Model.ProductImages)
+                            {
+                                <img class="border mx-1 rounded-2 item-thumb" width="80" height="80" src="/img/products/@image.ImagePath" data-bs-target="#imageCarousel" data-bs-slide-to="@thumbnail" />
+                                thumbnail++;
+                            }
+                        }
+                    </div>
+                </div>           
             </aside>
             <main class="col-lg-6">
                 <div class="ps-lg-3">
                     <h4 class="title text-dark">
-                        Quality Men's Hoodie for Winter, Men's Fashion <br />
-                        Casual Hoodie
+                        @Model.Name
                     </h4>
                     <div class="d-flex flex-row my-3">
                         <div class="text-warning mb-1 me-2">
@@ -74,12 +85,17 @@
                     </div>
 
                     <div class="mb-3">
-                        <span class="h5">$75.00</span>
+                        <span class="h5">@Model.Price.ToString("C", new CultureInfo("en-US"))</span>
                     </div>
 
+                    <dl class="row">
+                        <dt class="col-3">Category:</dt>
+                        <dd class="col-9">@Model.Category?.Name</dd>
+
+                    </dl>
                     <hr />
-                    <a href="#" class="btn btn-success shadow-0"> Buy now </a>
-                    <a href="#" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
+                    <a asp-action="" asp-controller="" class="btn btn-success shadow-0"> Buy now </a>
+                    <a asp-action="" asp-controller="" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
                 </div>
             </main>
         </div>
@@ -87,7 +103,7 @@
 </section>
 <!-- content -->
 
-<section class="bg-white border-top py-4">
+<section class="bg-white py-4">
     <div class="container">
         <div class="row d-flex align-items-stretch gx-4">
             <div class="col-lg-8 mb-4">
@@ -117,11 +133,16 @@
                     <!-- Pills content -->
                     <div class="tab-content" id="ex1-content">
                         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description">
-                            <p>
-                                With supporting text below as a natural lead-in to additional content. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                                enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                pariatur.
-                            </p>
+                            @if(Model.Description != null)
+                            {
+                                <p>
+                                    @Model.Description
+                                </p>
+                            }else{
+                                <p>
+                                    No Description
+                                </p>
+                            }
                         </div>
                         <div class="tab-pane fade" id="feedback" role="tabpanel" aria-labelledby="feedback">
                             <p>
@@ -138,7 +159,7 @@
                 <div class="px-0 border rounded-2 shadow-0">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Similar items</h5>
+                            <h5 class="card-title">You can like</h5>
                             <div class="col-lg-12 mt-3">
                                 <a href="">
                                     <div class="d-flex align-items-center">
