[PhucPLD - 2025/03/28] Apply Datatables to Customer, Feedback Admin Page and demo view feedback in home page

--- a/WebApp/Views/Admin/CustomerList.cshtml
+++ b/WebApp/Views/Admin/CustomerList.cshtml
@@ -1,39 +1,24 @@
-﻿@model IEnumerable<BusinessObject.Model.User>
-
-@{
+﻿@{
     ViewData["Title"] = "Customer List";
 }
 <div class="admin-margin">
     <h2>Customer List</h2>
 
-    <table class="table">
+    <table id="tblData" class="table table-bordered table-striped" width="100%">
         <thead>
             <tr>
-                <th>ID</th>
+                <th>No</th>
                 <th>Email</th>
                 <th>Username</th>
                 <th>Phone Number</th>
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>@customer.Id</td>
-                    <td>@customer.Email</td>
-                    <td>@customer.UserName</td>
-                    <td>@customer.PhoneNumber</td>
-                    <td>
-                        <form asp-action="CustomerDetail" asp-route-id="@customer.Id" method="get" style="display:inline;">
-                            <button type="submit" class="btn btn-warning" >Detail</button>
-                        </form>
-                    </td>
-                </tr>
-            }
-        </tbody>
     </table>
-    <p>
-        <a asp-action="Index" class="btn btn-secondary">Back to Dashboard</a>
-    </p>
 </div>
+<p>
+    <a asp-action="Index" class="btn btn-secondary">Back to Dashboard</a>
+</p>
+@section Scripts{
+    <script src="~/js/Admin/Customer.js"></script>
+}
